# product-feed

./: pyproject.toml
product_feed/model/: __init__.py  google.py
tests/model/: google_test.py
